- fix spacing

--- a/assets/output.css
+++ b/assets/output.css
@@ -711,14 +711,6 @@ video {
   margin-top: 2rem;
 }
 
-.mt-4{
-  margin-top: 1rem;
-}
-
-.mt-12{
-  margin-top: 3rem;
-}
-
 .flex{
   display: flex;
 }
@@ -753,46 +745,6 @@ video {
 
 .w-36{
   width: 9rem;
-}
-
-.w-10{
-  width: 2.5rem;
-}
-
-.w-40{
-  width: 10rem;
-}
-
-.w-80{
-  width: 20rem;
-}
-
-.w-60{
-  width: 15rem;
-}
-
-.w-full{
-  width: 100%;
-}
-
-.min-w-60{
-  min-width: 15rem;
-}
-
-.min-w-52{
-  min-width: 13rem;
-}
-
-.min-w-6{
-  min-width: 1.5rem;
-}
-
-.min-w-64{
-  min-width: 16rem;
-}
-
-.min-w-7{
-  min-width: 1.75rem;
 }
 
 .min-w-72{
@@ -843,6 +795,10 @@ video {
   gap: 0.5rem;
 }
 
+.gap-20{
+  gap: 5rem;
+}
+
 .gap-3{
   gap: 0.75rem;
 }
@@ -859,25 +815,16 @@ video {
   gap: 2rem;
 }
 
-.gap-20{
-  gap: 5rem;
-}
-
 .rounded-full{
   border-radius: 9999px;
 }
 
-<<<<<<< HEAD
-.rounded-xl{
-  border-radius: 0.75rem;
-}
-
-.rounded{
-  border-radius: 0.25rem;
-}
-
 .rounded-lg{
   border-radius: 0.5rem;
+}
+
+.rounded-xl{
+  border-radius: 0.75rem;
 }
 
 .border-2{
@@ -899,6 +846,11 @@ video {
   background-color: rgb(243 244 246 / var(--tw-bg-opacity));
 }
 
+.bg-gray-800{
+  --tw-bg-opacity: 1;
+  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+}
+
 .bg-orange-600{
   --tw-bg-opacity: 1;
   background-color: rgb(234 88 12 / var(--tw-bg-opacity));
@@ -909,24 +861,8 @@ video {
   background-color: rgb(2 6 23 / var(--tw-bg-opacity));
 }
 
-.bg-slate-700{
-  --tw-bg-opacity: 1;
-  background-color: rgb(51 65 85 / var(--tw-bg-opacity));
-}
-
-.bg-slate-600{
-  --tw-bg-opacity: 1;
-  background-color: rgb(71 85 105 / var(--tw-bg-opacity));
-}
-
-.bg-gray-900{
-  --tw-bg-opacity: 1;
-  background-color: rgb(17 24 39 / var(--tw-bg-opacity));
-}
-
-.bg-gray-800{
-  --tw-bg-opacity: 1;
-  background-color: rgb(31 41 55 / var(--tw-bg-opacity));
+.p-3{
+  padding: 0.75rem;
 }
 
 .p-4{
@@ -937,16 +873,6 @@ video {
   padding: 2rem;
 }
 
-.p-2{
-  padding: 0.5rem;
-}
-
-.p-3{
-  padding: 0.75rem;
-}
-
-=======
->>>>>>> 410a10e (- fix adoption section)
 .py-14{
   padding-top: 3.5rem;
   padding-bottom: 3.5rem;
@@ -957,19 +883,9 @@ video {
   padding-bottom: 4rem;
 }
 
-.py-4{
-  padding-top: 1rem;
-  padding-bottom: 1rem;
-}
-
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-}
-
-.py-1{
-  padding-top: 0.25rem;
-  padding-bottom: 0.25rem;
 }
 
 .text-center{
@@ -1005,8 +921,8 @@ video {
   line-height: 1.75rem;
 }
 
-.text-lg{
-  font-size: 1.125rem;
+.text-xl{
+  font-size: 1.25rem;
   line-height: 1.75rem;
 }
 
@@ -1024,6 +940,11 @@ video {
 
 .leading-\[60px\]{
   line-height: 60px;
+}
+
+.text-gray-400{
+  --tw-text-opacity: 1;
+  color: rgb(156 163 175 / var(--tw-text-opacity));
 }
 
 .text-gray-600{
@@ -1056,58 +977,9 @@ video {
   color: rgb(82 82 91 / var(--tw-text-opacity));
 }
 
-.text-slate-300{
-  --tw-text-opacity: 1;
-  color: rgb(203 213 225 / var(--tw-text-opacity));
-}
-
-.text-gray-300{
-  --tw-text-opacity: 1;
-  color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-
-.text-gray-100{
-  --tw-text-opacity: 1;
-  color: rgb(243 244 246 / var(--tw-text-opacity));
-}
-
-.text-gray-500{
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
-}
-
-.text-gray-400{
-  --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
-}
-
 @media (min-width: 768px){
-  .md\:order-1{
-    order: 1;
-  }
-
-  .md\:order-2{
-    order: 2;
-  }
-
-  .md\:order-3{
-    order: 3;
-  }
-
   .md\:order-none{
     order: 0;
-  }
-
-  .md\:col-span-3{
-    grid-column: span 3 / span 3;
-  }
-
-  .md\:col-span-9{
-    grid-column: span 9 / span 9;
-  }
-
-  .md\:row-start-auto{
-    grid-row-start: auto;
   }
 
   .md\:col-span-4{
@@ -1132,10 +1004,6 @@ video {
 
   .md\:flex-row{
     flex-direction: row;
-  }
-
-  .md\:justify-between{
-    justify-content: space-between;
   }
 
   .md\:text-2xl{
